--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # date récuppéré par dateApp
 # accessible par console.log(process.env.VUE_APP_DATE)
-#VUE_APP_DATE=2022-01-01
-vue_app_date=2022-01-01
+VUE_APP_DATE=2022-01-01
+# vue_app_date=2022-01-01
+VUE_APP_URLCOVOITURAGE=http://localhost:9090/api/covoiturage
