--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # accessible par console.log(process.env.VUE_APP_DATE)
 VUE_APP_DATE=2022-02-16
 # vue_app_date=2022-01-01
-VUE_APP_URLCOVOITURAGE=http://localhost:9090/api/covoiturage
+VUE_APP_URLCOVOITURAGE=http://localhost:9090/covoiturage/reservation
