--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
 # vue_app_date=2022-01-01
 VUE_APP_DATE=2021-12-01
 VUE_APP_URLCOVOITURAGE=http://localhost:9090/covoiturage/reservation
+VUE_APP_BASE=http://localhost:9090/
