branchement avec le back

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 # accessible par console.log(process.env.VUE_APP_DATE)
 VUE_APP_DATE=2022-02-18
 # vue_app_date=2022-01-01
-VUE_APP_DATE=2021-12-01
+VUE_APP_DATE=
 VUE_APP_URLCOVOITURAGE=http://localhost:9090/covoiturage/reservation
 VUE_APP_BASE=http://localhost:9090/
